--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,15 +45,15 @@ jobs:
         working-directory: finish
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 11
+      - name: Set up JDK 17
         uses: actions/setup-java@v1
         with:
-          java-version: 11
+          java-version: 17
       - run: unset _JAVA_OPTIONS
       - name: Run tests
         run: |
           chmod +x ../scripts/testApp.sh
-          sudo ../scripts/testApp.sh
+          sudo -E ../scripts/testApp.sh
       - name: Post tests
         if: always()
         run: |
@@ -61,6 +61,8 @@ jobs:
           sudo cat "$logsPath" | sudo grep Launching
           logsPath=$(sudo find . -name "console.log" | grep system);
           sudo cat "$logsPath" | sudo grep Launching
+          sudo chmod 777 inventory/target/liberty/wlp/usr/servers/defaultServer/logs
+          sudo chmod 777 system/target/liberty/wlp/usr/servers/defaultServer/logs
       - name: Archive finish inventory logs if failed
         if: failure()
         uses: actions/upload-artifact@v2
