--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -76,3 +76,15 @@ jobs:
         with:
           name: finish-system-logs
           path: finish/system/target/liberty/wlp/usr/servers/defaultServer/logs/
+      - name: Archive start inventory logs if failed
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: start-inventory-logs
+          path: start/inventory/target/liberty/wlp/usr/servers/defaultServer/logs/
+      - name: Archive start system logs if failed
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: start-system-logs
+          path: start/system/target/liberty/wlp/usr/servers/defaultServer/logs/
