--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,8 +53,9 @@ jobs:
       - run: unset _JAVA_OPTIONS
       - name: Run tests
         run: |
-          chmod +x ../scripts/testApp.sh
-          sudo -E ../scripts/testApp.sh
+          chmod +x ../scripts/test*.sh
+          sudo -E ../scripts/testAppFinish.sh
+          sudo -E ../scripts/testAppStart.sh
       - name: Post tests
         if: always()
         run: |
