--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,6 +59,8 @@ jobs:
       - name: Post tests
         if: always()
         run: |
+          sudo chmod -R +rx system/target
+          sudo chmod -R +rx inventory/target
           logsPath=$(sudo find . -name "console.log" | grep inventory);
           sudo cat "$logsPath" | sudo grep Launching
           logsPath=$(sudo find . -name "console.log" | grep system);
